# KeenClassik

./: .gitignore  AGENTS.md  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile  README.md  RELEASE_NOTES_COMPARISON.md  RELEASE_NOTES_v1.0-classik-arm64.md  RELEASE_UPDATE_INSTRUCTIONS.md  SUMMARY.md  THIRD_PARTY_LICENSES  gemini.md  gradle.properties  installation_requirements.md  pyproject.toml
.github/workflows/: android-ci.yml  android-release.yml  release.yml
app/: CMakeLists.txt  INSTALLATION_REQUIREMENTS.md  build.gradle
app/src/androidTest/java/com/oichkatzelesfrettschen/keenclassik/: ClassikGameFlowTest.kt  KeenActivityRecreateTest.kt  KeenBenchmarkTest.kt  MultiplicationOnlyInvariantTest.kt  PerfMetrics.kt  PuzzleFlowSmokeTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/oichkatzelesfrettschen/keenclassik/: ApplicationCore.java  GitHubLogger.java  KeenActivity.kt  KeenModel.java  KeenModelBuilder.java  MenuActivity.kt  SoundManager.java  TestEnvironment.kt  TestHooks.kt
app/src/main/java/com/oichkatzelesfrettschen/keenclassik/data/: GenerationResult.kt  GridValidator.kt  JniResultParser.kt  KeenHints.kt  KeenValidator.kt  PuzzleParser.kt  PuzzleRepository.kt  SaveManager.kt  UserStatsManager.kt
app/src/main/java/com/oichkatzelesfrettschen/keenclassik/perf/: PerfTrace.kt
app/src/main/java/com/oichkatzelesfrettschen/keenclassik/ui/: AccessibilityUtils.kt  DpadNavigation.kt  GameScreen.kt  GameUiState.kt  GameViewModel.kt  MenuScreen.kt  VictoryAnimation.kt
app/src/main/java/com/oichkatzelesfrettschen/keenclassik/ui/theme/: ColorSystem.kt  DesignTokens.kt  GameTheme.kt
app/src/main/jni/: dlx.h  jni_error_codes.h  keen-android-jni.c  keen.c  keen.h  keen_generate.c  keen_internal.h  keen_modes.h  keen_solver.c  keen_validate.c  latin_bounds.h  maxflow_optimized.c  puzzles.h
app/src/main/res/values/: colors.xml  styles.xml
app/src/test/java/com/oichkatzelesfrettschen/keenclassik/: KeenModelStateTest.kt
app/src/test/java/com/oichkatzelesfrettschen/keenclassik/data/: DeterministicSeedingTest.kt  GameModeTest.kt  JniResultParserTest.kt  KeenProfileTest.kt  PuzzleInvariantsTest.kt  PuzzleParserTest.kt  PuzzleRepositoryTest.kt  SaveManagerProfileTest.kt
app/src/test/java/com/oichkatzelesfrettschen/keenclassik/performance/: GenerationPerformanceTest.kt
app/src/test/java/com/oichkatzelesfrettschen/keenclassik/ui/: AccessibilityUtilsTest.kt  GameViewModelTest.kt  LayoutCalculationTest.kt
core/: INSTALLATION_REQUIREMENTS.md  build.gradle
core/src/main/java/com/oichkatzelesfrettschen/keenclassik/data/: FlavorConfig.kt  GameMode.kt  KeenProfile.kt
docs/: ARCHITECTURE_MODULES.md  C23_STANDARDIZATION_SPEC.md  CLASSIK_TEST_REPORT.md  CONFIG_AUDIT.md  DETERMINISTIC_SEEDING.md  FINAL_RELEASE_SUMMARY_2026-01-05.md  FORMATTING_STYLES.md  IMPLEMENTATION_SUMMARY.md  LEGACY_HEURISTICS.md  MANUAL_TEST_PLAN.md  MATH_INVARIANTS.md  REFACTORING_REPORT.md  RELEASE_2026-01-05_ARM64.md  RELEASE_CHECKLIST_2026-01-05.md  REPRODUCIBLE_BUILD.md  UI_UX_SPACE_FIX_ACTION_PLAN.md
docs/perf/: README.md
scripts/: debug_launch.sh  emulator_logcat_capture.sh  emulator_smoke_test.py  keen_bot.py  run_android_tests.sh  test_classik_modes.sh  update-release-notes.sh
scripts/perf/: CMakeLists.txt  android_pgo.sh  gradle_native_instrument.sh  host_build.sh  host_coverage.sh
tasks/: TODO_MASTER.md
tests/native/: CMakeLists.txt  keen_test_harness.c  maxflow_test.c
